--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <h1>Will you be my Valentine?</h1>
             <div id="no-message" class="no-message"></div>
             <div class="buttons-container">
-                <button id="yes-btn" class="btn">Yes</button>
-                <button id="no-btn" class="btn">No</button>
+                <button id="yes-btn" class="btn"><span class="btn-content">Yes</span></button>
+                <button id="no-btn" class="btn"><span class="btn-content">No</span></button>
             </div>
         </div>
 
