improve game inst

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
         <!-- Mini game screen -->
         <div id="game-screen" class="screen">
-            <h2>Collect the Hearts!</h2>
-            <p>Click on the hearts to collect them. Collect 10 in 10 seconds to see something special!</p>
+            <h2>💘 Catch My Love! 💘</h2>
+            <p>Tap the falling hearts to catch my love! 💕 Collect 10 hearts in 10 seconds to unlock a special surprise! 🥰✨</p>
             <div id="game-area">
                 <div id="score">Hearts collected: <span id="score-count">0</span>/10</div>
                 <div id="timer">Time: 10s</div>
