--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                 <div id="moves-counter">Moves: <span id="moves">0</span></div>
             </div>
         </div>
+
+        <!-- Balloon dodge game screen -->
+        <div id="balloon-screen" class="screen">
+            <h2>💖 Protect My Heart! 💖</h2>
+            <div id="balloon-timer">⏳ 30s</div>
+            <div id="balloon-area">
+                <div id="balloon">💖</div>
+            </div>
+            <button id="start-balloon-btn" class="btn">Start</button>
+            <div id="balloon-message"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
