--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         
         <!-- Second game screen -->
         <div id="second-game-screen" class="screen">
-            <h2>Memory Match Game</h2>
-            <p>Match the pairs of hearts to reveal our special moments!</p>
+            <h2>💞 Heart Match 💞</h2>
+            <p>Match the pairs of hearts to prove your love!</p>
             <div id="memory-game-container">
                 <div id="game-board"></div>
                 <div id="moves-counter">Moves: <span id="moves">0</span></div>
